# budget-importer

./: .editorconfig  .gitignore  .golangci.yml  Containerfile  README.md  compose.yml  config.example.yaml  go.mod  go.sum  k8s.yaml  pyproject.toml
.github/workflows/: docker.yml  lint.yml
budget/: cli.py  main.py
budget/clients/: google.py  paperless.py  simplefin.py
budget/models/: google.py  paperless.py  simplefin.py
cmd/budget-import/: main.go  main_test.go
internal/clients/: google.go  google_test.go  simplefin.go  simplefin_test.go
internal/models/: google.go  google_test.go  simplefin.go  simplefin_test.go
